# UNOPractice

./: CMakeLists.txt
src/: card.c  card.h  client.c  client.h  game.c  game.h  main.c  msg.c  msg.h  player.c  player.h  server.c  server.h  toclient.c  toclient.h
